# Mesh-Quality

./: CMakeLists.txt  README.md  edit_node_116.py
Example/: CMakeLists.txt
include/: geometry.h  gmshhandler.h  logging.h  mesh.h  mqexception.h  pch.h  profiling.h
src/: CMakeLists.txt  EntryPoint.cpp  geometry.cpp  gmshhandler.cpp  mesh.cpp  pch.cpp
